2008-02-29  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Handle gif and jpg devices.

2008-02-28  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m (get_old_gnuplot_color): New subfunction.
	Use it to replace repeated if/elseif blocks.

2008-02-28  Kai Habel  <kai.habel@gmx.de>

	* plot/__go_draw_axes__.m: If facecolor property of a surface is
	"none", don't use pm3d mode and set linestyle correctly. 

2008-02-25  Ben Abbott <bpabbott@mac.com>

	* control/system/zpout.m, finance/irr.m, general/int2str.m,
	general/num2str.m, miscellaneous/bug_report.m,
	miscellaneous/copyfile.m, miscellaneous/dir.m,
	miscellaneous/edit.m, miscellaneous/fullfile.m,
	miscellaneous/mkoctfile.m, miscellaneous/movefile.m,
	miscellaneous/tempdir.m, miscellaneous/unpack.m,
	path/__extractpath__.m, pkg/pkg.m, plot/__ezplot__.m,
	plot/__go_draw_axes__.m, plot/legend.m, plot/print.m,
	signal/spectral_adf.m, signal/spectral_xdf.m,
	statistics/tests/z_test.m, statistics/tests/z_test_2.m,
	strings/Makefile.in, strings/strcat.m, strings/strvcat.m,
	testfun/assert.m, testfun/demo.m, testfun/speed.m,
	testfun/test.m: Use cstrcat instead of strcat.

	* strings/strcat.m: New compatible version.

	* strings/cstrcat.m: Rename from strings/strcat.m.

2008-02-25  John W. Eaton  <jwe@octave.org>

	* strings/isstrprop.m: New file.

2008-02-25  Ryan Hinton  <rwh4s@virginia.edu>

	* miscellaneous/unpack.m: Use "-f -" args for tar.

2008-02-24  John W. Eaton  <jwe@octave.org>

	* specfun/log2.m: Ensure returned value of F strictly less than 1.
	From Dave Hawthorne <davehawthorne@ieee.org>.

2008-02-22  Ben Abbott  <bpabbott@mac.com>

	* specfun/legendre.m: Doc fix.

2008-02-22  David Bateman  <dbateman@free.fr>

	* sparse/pcg.m, sparse/spdiags, spstats.m: Remove references to
	spdiag.
	
2008-02-22  John W. Eaton  <jwe@octave.org>

	* miscellaneous/fullfile.m: Improve handling of empty args and
	args ending with filesep.

	* control/base/__stepimp__.m: Don't use subplot for just one plot.
