@@ -1,3 +1,7 @@
+2008-03-04  Ben Abbott <bpabbott@mac.com>
+
+	* polynomial/polyfit.m: Modified tests to respect a relative tolerance.
+
 2008-02-29  John W. Eaton  <jwe@octave.org>
 
 	* plot/print.m: Handle gif and jpg devices.
